--- a/src/main/resources/UWeb/Pages/Page_Profile.properties
+++ b/src/main/resources/UWeb/Pages/Page_Profile.properties
@@ -25,3 +25,4 @@ Popup_message css=#popup-content
 Subscribes_block_link css=span#SubscriptionsWidget923763ToggleLink.dynamic
 No_subscribes_message css=#SubscriptionsWidget923763Tbody.profile-info-params h3
 Connected_services css=.profile-info-params>tr>th div.text-box.with-count
+Balance css=.balance-info>b
