--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,11 @@
             <artifactId>fluent-hc</artifactId>
             <version>4.5.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>2.0.0.0</version>
+        </dependency>
 
     </dependencies>
         
