Добавлены шаги с автооплатой в кейс инфо о состоянии счета

--- a/src/main/resources/UWeb/Pages/Page_Profile.properties
+++ b/src/main/resources/UWeb/Pages/Page_Profile.properties
@@ -23,5 +23,7 @@ Popup_block css=.popup-content
 Popup_message css=#popup-content
 Subscribes_block_link css=span#SubscriptionsWidget923763ToggleLink.dynamic
 No_subscribes_message css=#SubscriptionsWidget923763Tbody.profile-info-params h3
-Connected_services css=.profile-info-params>tr>th div.text-box.with-count
+Connected_services css=div#MyServicesWidget923702.table-content
+Connected_services_link css=.profile-info-params>tr>th div.text-box.with-count
 Balance css=.balance-info>b
+Autooplata css=.profile-info-params>tr>td
