написан тест подписок

--- a/src/main/resources/UWeb/Pages/Page_Profile.properties
+++ b/src/main/resources/UWeb/Pages/Page_Profile.properties
@@ -22,6 +22,11 @@ CTN_Has_HappyTime_1 name=9683513600
 Popup_block css=.popup-content
 Popup_message css=#popup-content
 Subscribes_block_link css=span#SubscriptionsWidget923763ToggleLink.dynamic
+Subscribes_block css=#SubscriptionsWidget923763 [id='SubscriptionsWidget923763Tbody']
+Subs_checked_active css=#SubscriptionsWidget923763 [id='SubscriptionsWidget923763Tbody'] .checkbox-slide.checked
+Subs_turnoff_popup css=.popup-content
+Subs_no_turnoff css=.dynamic.cancel-subscription-remove-button
+Subs_checked_inactive css=#SubscriptionsWidget923763 [id='SubscriptionsWidget923763Tbody'] .checkbox-slide.inactive.checked
 No_subscribes_message css=#SubscriptionsWidget923763Tbody.profile-info-params h3
 Connected_services css=div#MyServicesWidget923702.table-content
 Connected_services_link css=.profile-info-params>tr>th div.text-box.with-count
